<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".TrainerFragment"
        android:padding="30dp">
    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/imageContainer"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/avatar"
                android:src="@mipmap/avatar_foreground"
                android:scaleType="fitCenter"/>
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/openCameraBtn"
                android:src="@drawable/ic_baseline_photo_camera_24"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/informationContainer"
            android:orientation="vertical"
            android:layout_weight="3">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/name_hint"
                android:text="@={viewModel.name}"
                android:padding="10dp"
                android:id="@+id/nameET"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@={viewModel.account}"
                android:hint="@string/account_hint"
                android:padding="10dp"
                android:id="@+id/accountET"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@={viewModel.phoneNumber}"
                android:inputType="number"
                android:hint="@string/phone_hint"
                android:padding="10dp"
                android:id="@+id/phoneET"/>
            <CheckBox
                android:id="@+id/graduateCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/graduate"
                android:checked="@={viewModel.graduate}"/>

        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/saveBtn"
                android:text="@string/save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/cancelBtn"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

    </RelativeLayout>
    <data>
        <variable
            name="viewModel"
            type="com.example.mvvm_livedata.trainee_detail.TraineeDetailViewModel" />
    </data>
</layout>